--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </header>
     <main>
-      <section class="hero section">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">
             Ефективні рішення для <br />
@@ -58,7 +58,7 @@
         </div>
       </section>
       <section class="benefits section">
-        <div class="benefits container">
+        <div class="container">
           <h2 class="section-title visually-hidden">Наші переваги</h2>
           <ul class="benefits-list list">
             <li class="item">
