--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,9 @@
         <h1 class="visually-hidden">portfolio</h1>
         <ul class="filter list">
           <li class="filter-item">
+            <button type="button" class="button-filter button-wide">Усі</button>
+          </li>
+          <li class="filter-item">
             <button type="button" class="button-filter">Веб-сайти</button>
           </li>
           <li class="filter-item">
@@ -60,9 +63,6 @@
           </li>
           <li class="filter-item">
             <button type="button" class="button-filter">Дизайн</button>
-          </li>
-          <li class="filter-item">
-            <button type="button" class="button-filter">Усі</button>
           </li>
           <li class="filter-item">
             <button type="button" class="button-filter">Маркетинг</button>
